--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://cyberforge.com/"
+baseURL = "https://cyberform.org/"
 title = "Cyberforge – Hacker's Vault"
 languageCode = "en-us"
 theme = "cyberpunk"
