--- a/.github/workflows/AutoBuild.yml
+++ b/.github/workflows/AutoBuild.yml
@@ -4,36 +4,44 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '0 3 * * *'  # daily at 3AM
+    - cron: '0 3 * * *'  # daily at 3AM (server time)
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python 3.x
         uses: actions/setup-python@v4
-        with: python-version: '3.x'
+        with:
+          python-version: '3.x'
 
-      - name: Install Scraper deps
+      - name: Install Scraper Dependencies
         run: |
           cd scraper
           pip install -r requirements.txt
 
-      - name: Bootstrap Scraper
+      - name: Generate Hugo Content
         run: |
           cd scraper
-          python3 bootstrap.py
+          python3 generate_hugo_content.py
 
-      - name: Build Hugo site
+      - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.104.2'
+
+      - name: Build Hugo Site
+        run: |
+          cd site
+          hugo
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./site/public
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          
+          cname: cyberform.org
