--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,52 @@
-name: Auto-update sources
+name: Auto Build & Deploy
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   schedule:
-    - cron: '0 0 * * *'  # Run every day at midnight
+    - cron: '0 3 * * *'  # daily at 3AM UTC
+
+permissions:
+  contents: write  # Needed to push to gh-pages
 
 jobs:
-  update_sources:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r scraper/requirements.txt
+      - name: Install Python Dependencies
+        run: |
+          cd scraper
+          pip install -r requirements.txt
+          pip install lxml
 
-    - name: Run scraper and generate sources
-      env:
-        CYBERFORGE_GH_TOKEN: ${{ secrets.CYBERFORGE_GH_TOKEN }}  # Pass the token here
-      run: |
-        python scraper/generate_sources.py
+      - name: Scrape and Generate Content
+        run: |
+          cd scraper
+          python scrape.py
+          python classify.py
+          python generate_hugo_content.py
 
-    - name: Commit and push changes
-      env:
-        GH_TOKEN: ${{ secrets.CYBERFORGE_GH_TOKEN }}  # Pass the token for git push
-      run: |
-        git add scraper/sources.txt
-        git diff --quiet || git commit -m "Auto-update sources by GitHub Actions"
-        git push https://x-access-token:${GH_TOKEN}@github.com/KomaVR/CYBER-FORGE.git HEAD:main
+      - name: Install Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.111.3'
+
+      - name: Build Hugo Site
+        run: |
+          cd site
+          hugo
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.CYBERFORGE_GH_TOKEN }}
+          publish_dir: ./site/public
+          publish_branch: gh-pages
