--- a/.github/workflows/AutoBuild.yml
+++ b/.github/workflows/AutoBuild.yml
@@ -4,7 +4,10 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '0 3 * * *'  # daily at 3AM (server time)
+    - cron: '0 3 * * *'  # daily at 3AM UTC
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -14,12 +17,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.x
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Install Scraper Dependencies
+      - name: Install Python Dependencies
         run: |
           cd scraper
           pip install -r requirements.txt
@@ -29,7 +32,12 @@ jobs:
           cd scraper
           python3 generate_hugo_content.py
 
-      - name: Setup Hugo
+      - name: Run Markdown Front-Matter Fixer
+        run: |
+          cd scraper
+          python3 fix_existing_tool_pages.py   # <— Make sure this script lives in scraper/
+
+      - name: Install Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.104.2'
