--- a/.github/workflows/AutoBuild.yml
+++ b/.github/workflows/AutoBuild.yml
@@ -36,7 +36,12 @@ jobs:
         run: |
           cd scraper
           python3 fix_existing_tool_pages.py   # <— Make sure this script lives in scraper/
-
+      
+      - name: Strictly rebuild front matter
+        run: |
+          cd scraper
+          python3 strict_frontmatter_rebuild.py
+          
       - name: Install Hugo
         uses: peaceiris/actions-hugo@v2
         with:
