--- a/.github/workflows/AutoBuild.yml
+++ b/.github/workflows/AutoBuild.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '0 3 * * *'  # Daily at 3AM UTC
+    - cron: '0 3 * * *'  # daily at 3AM UTC
 
 permissions:
   contents: write
@@ -25,8 +25,8 @@ jobs:
       - name: Install Python Dependencies
         run: |
           cd scraper
-          pip install -r requirements.txt
-          pip install PyYAML
+          pip install -r requirements.txt || true  # Even if empty, continue
+          pip install pyyaml
 
       - name: Generate Hugo Content
         run: |
@@ -38,20 +38,15 @@ jobs:
           cd scraper
           python3 strict_frontmatter_rebuild.py
 
-      - name: Run Markdown Front-Matter Fixer
+      - name: Fix Existing Markdown Files (Skip broken YAML)
         run: |
           cd scraper
-          python3 fix_existing_tool_pages.py
+          python3 fix_filenames_and_frontmatter.py
 
       - name: Cleanup Front Matter
         run: |
           cd scraper
           python3 cleanup_frontmatter.py
-
-      - name: Fix Filenames and Front Matter
-        run: |
-          cd scraper
-          python3 fix_filenames_and_frontmatter.py
 
       - name: Install Hugo
         uses: peaceiris/actions-hugo@v2
@@ -69,4 +64,3 @@ jobs:
           publish_dir: ./site/public
           github_token: ${{ secrets.CYBERFORGE_GH_TOKEN }}
           cname: cyberform.org
-          
