--- a/.github/workflows/AutoBuild.yml
+++ b/.github/workflows/AutoBuild.yml
@@ -1,52 +1,98 @@
-name: Build and Deploy Hugo Site
+name: Auto Build & Deploy
 
 on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '0 3 * * *' # optional daily rebuild at 3AM UTC
+    - cron: '0 3 * * *'  # daily at 3AM UTC
 
 permissions:
   contents: write
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
       - name: Install Python Dependencies
         run: |
           cd scraper
+          pip install -r requirements.txt || true  # Even if empty, continue
           pip install pyyaml
 
-      - name: Fix Bad Filenames and Front Matter
+      - name: Generate Hugo Content
         run: |
           cd scraper
-          python3 fix_filenames_and_frontmatter.py || echo "Skipping errors during filename fix"
+          python3 generate_hugo_content.py
+
+      - name: Strictly Rebuild Front Matter
+        run: |
+          cd scraper
+          python3 strict_frontmatter_rebuild.py
+
+      - name: Fix Existing Markdown Files (Skip broken YAML)
+        run: |
+          cd scraper
+          python3 fix_filenames_and_frontmatter.py
+
+      - name: Cleanup Front Matter
+        run: |
+          cd scraper
+          python3 cleanup_frontmatter.py
 
       - name: Install Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.104.2'
+          
+      - name: Purge Bad Markdown Files
+        run: |
+          python3 - <<EOF
+          import os
+          import yaml
 
+          content_dir = "site/content/tools"
+
+          for root, dirs, files in os.walk(content_dir):
+              for filename in files:
+                  if filename.endswith(".md"):
+                      path = os.path.join(root, filename)
+                      try:
+                          with open(path, "r", encoding="utf-8") as f:
+                              lines = f.readlines()
+
+                          if lines[0].strip() != '---':
+                              raise Exception("Missing starting ---")
+
+                          yaml_lines = []
+                          for line in lines[1:]:
+                              if line.strip() == '---':
+                                  break
+                              yaml_lines.append(line)
+
+                          yaml.safe_load("".join(yaml_lines))
+                      except Exception as e:
+                          print(f"Bad YAML in {path}: {e}")
+                          os.remove(path)
+                          print(f"Deleted bad file: {path}")
+          EOF
+          
       - name: Build Hugo Site
         run: |
           cd site
-          hugo --buildFuture --buildDrafts || echo "Skipping build errors"
+          hugo
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./site/public
-          publish_branch: gh-pages
-          cname: cyberform.org  # <- remove this line if you don't use a custom domain
-          
+          github_token: ${{ secrets.CYBERFORGE_GH_TOKEN }}
+          cname: cyberform.org
