--- a/site/config.toml
+++ b/site/config.toml
@@ -1,18 +1,21 @@
 baseURL = "https://cyberform.org/"
-title = "Cyberforge – Hacker's Vault"
+title = "CyberForge – Hacker's Vault"
 languageCode = "en-us"
 theme = "cyberpunk"
 paginate = 25
 enableRobotsTXT = true
 
 [params]
-  author = "Cyberforge Crew"
+  author = "CyberForge Crew"
   description = "Auto-updating arsenal for Black, Grey, and White Hat hackers."
-  defaultImage = "https://cyberform.org/images/og-default.png"
-  themeColor = "#00FFEA"
+  themeColor = "#33FF33"
+  image = "https://cyberform.org/images/og-default.png"
 
 [outputs]
   home = ["HTML","RSS"]
+
+[taxonomies]
+  category = "categories"
 
 [menu]
   [[menu.main]]
