--- a/site/config.toml
+++ b/site/config.toml
@@ -4,14 +4,12 @@ languageCode = "en-us"
 theme = "cyberpunk"
 paginate = 25
 enableRobotsTXT = true
-canonifyURLs = true
-relativeURLs = false
 
 [params]
   author = "CyberForge Crew"
   description = "Auto-updating arsenal for Black, Grey, and White Hat hackers."
   themeColor = "#33FF33"
-  image = "https://cyberform.org/images/og-default.png"
+  defaultImage = "https://cyberform.org/images/og-default.png"
 
 [outputs]
   home = ["HTML","RSS"]
@@ -32,3 +30,6 @@ relativeURLs = false
     name = "Categories"
     url = "/categories/"
     weight = 3
+
+# (Optional) control trailing slash if you need:
+trailingSlash = "never"
