--- a/.github/workflows/AutoBuild.yml
+++ b/.github/workflows/AutoBuild.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Python Dependencies
         run: |
           cd scraper
-          pip install -r requirements.txt || true  # Even if empty, continue
+          pip install -r requirements.txt || true
           pip install pyyaml
 
       - name: Generate Hugo Content
@@ -48,11 +48,16 @@ jobs:
           cd scraper
           python3 cleanup_frontmatter.py
 
+      - name: Fix External Links (Move Visit Website to external_link)
+        run: |
+          cd scraper
+          python3 fix_external_links.py
+
       - name: Install Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.104.2'
-          
+
       - name: Purge Bad Markdown Files
         run: |
           python3 - <<EOF
@@ -84,7 +89,7 @@ jobs:
                           os.remove(path)
                           print(f"Deleted bad file: {path}")
           EOF
-          
+
       - name: Build Hugo Site
         run: |
           cd site
