--- a/site/config.toml
+++ b/site/config.toml
@@ -15,7 +15,7 @@ enableRobotsTXT = true
   home = ["HTML","RSS"]
 
 [taxonomies]
-  category = "categories"
+  category = "catagories"
 
 [menu]
   [[menu.main]]
